todo: fix spacing

--- a/packages/frosted-ui/src/components/lightbox.css
+++ b/packages/frosted-ui/src/components/lightbox.css
@@ -20,7 +20,6 @@
 }
 
 .fui-LightboxContent {
-	max-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -33,7 +32,6 @@
 	display: flex;
 	align-items: center;
 	gap: 3rem;
-	height: 90vh;
 	position: relative;
 	scroll-snap-type: x mandatory;
 	overflow-x: scroll;
@@ -57,14 +55,13 @@
 	position: relative;
 	z-index: 1;
 	flex: 0 0 100%;
-	max-width: 100vw;
-
-	margin: 20px 0;
+	display: flex;
 	scroll-snap-align: start;
 
 	& > * {
-		max-height: 100%;
-		max-width: auto;
+		max-width: 100%;
+		height: auto;
+		object-fit: cover;
 	}
 
 	&.fui-LightboxActiveItem {
@@ -84,9 +81,11 @@
 	bottom: 0;
 	width: 100%;
 	padding: 20px 30px;
+	flex: 0 0 100%;
 	max-width: 90%;
 	scroll-snap-type: x mandatory;
 	overflow-x: scroll;
+	overflow-y: auto;
 	scroll-behavior: smooth;
 	overscroll-behavior-x: contain;
 	-webkit-overflow-scrolling: touch;
@@ -106,7 +105,6 @@
 	padding: 0;
 	cursor: pointer;
 	transition: all ease-in-out 0.1s;
-	overflow: hidden;
 	border-radius: 8px;
 	outline-color: transparent;
 	will-change: transform;
@@ -138,6 +136,8 @@
 
 .fui-LightboxContainer {
 	position: relative;
+	display: flex;
+	flex-direction: column;
 }
 
 .fui-LightboxPrevButton {
